--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/fiskhandlarn/css-bootstrap-like-grid/issues"
   },
-  "homepage": "https://github.com/fiskhandlarn/css-bootstrap-like-grid#readme"
+  "homepage": "https://github.com/fiskhandlarn/css-bootstrap-like-grid#readme",
+  "devDependencies": {
+    "bootstrap": "4.3.1"
+  }
 }
